# warehouse_robot_project

./: .gitignore  .gitmodules  README.md
src/automobile_manufacturing/automobile_manufacturing/: package.xml
src/automobile_manufacturing/automobile_manufacturing/models/automobile_factory_Ground/: model.sdf
src/automobile_manufacturing/automobile_manufacturing/models/marker/marker_12/: model.config  model.sdf
src/automobile_manufacturing/automobile_manufacturing/models/marker/marker_14/: model.config  model.sdf
src/automobile_manufacturing/automobile_manufacturing/models/marker/marker_18/: model.config  model.sdf
src/automobile_manufacturing/automobile_manufacturing/models/marker/marker_2/: model.sdf
src/automobile_manufacturing/automobile_manufacturing/models/marker/marker_20/: model.config  model.sdf
src/automobile_manufacturing/automobile_manufacturing/models/marker/marker_21/: model.sdf
src/automobile_manufacturing/automobile_manufacturing/models/marker/marker_24/: model.sdf
src/automobile_manufacturing/automobile_manufacturing/models/marker/marker_25/: model.sdf
src/automobile_manufacturing/automobile_manufacturing/models/marker/marker_27/: model.config
src/automobile_manufacturing/automobile_manufacturing/models/marker/marker_28/: model.config
src/automobile_manufacturing/automobile_manufacturing/models/marker/marker_30/: model.config
src/automobile_manufacturing/automobile_manufacturing/models/marker/marker_31/: model.sdf
src/automobile_manufacturing/automobile_manufacturing/models/marker/marker_32/: model.sdf
(+190 files in other folders)
