<?xml version="1.0"?>
<package format="2">
  <name>automobile_manufacturing</name>
  <version>1.0.0</version>
  <description>
    automobile manufacturing package for a automobile factory world to use in manufacturing and logistics robot applications.
  </description>
  <license>Apache 2.0</license>
  <author email="kwm1223@naver.com">Kyeong-Won Min</author>
  <maintainer email="kwm1223@naver.com">Kyeong-Won Min</maintainer>
  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>gazebo</exec_depend>
  <exec_depend>gazebo_plugins</exec_depend>
  <export>
    <gazebo_ros plugin_path="${prefix}/lib" gazebo_media_path="${prefix}" gazebo_model_path="${prefix}/models"/>
  </export>
</package>